<resources>
    <string name="app_name">CHOOSECHEF</string>
    <string name="entra">Entra</string>
    <string name="registrate">Regístrate</string>
    <string name="boton_entrar">boton entrar</string>
    <string name="boton_registro">boton registro</string>
    <string name="boton_confirmar">boton confirmar</string>
    <string name="logo">logo</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contrasena</string>
    <string name="has_olvidado_la_contrasena">¿Has olvidado la contrasena?</string>
    <string name="usuario_registro">Introduce el usuario</string>
    <string name="contrasena_registro">Introduce la contrasena</string>
    <string name="contrasena2_registro">Repite la contrasena</string>
    <string name="contrasena_anterior">Introduce la contrasena anterior</string>
    <string name="contrasena_nueva">Introduce la nueva contrasena </string>
    <string name="contrasena2_nueva">Repite la nueva contrasena</string>
    <string name="eres_chef">¿Eres Chef?</string>
    <string name="usuario_nombre">Modifica tu nombre</string>
    <string name="usuario_direccion">Modifica tu dirección</string>
    <string name="usuario_telefono">Modifica tu teléfono</string>
    <string name="quieres_cambiar_la_contrasena">¿Quieres cambiar la contrasena?</string>
    <string name="modificacion_perfil">Modificación del perfil</string>
    <string name="boton_modperfil">boton_modPerfil</string>
    <string name="foto_chef">foto chef</string>
    <string name="nombre_del_chef">Nombre del chef</string>
    <string name="tipo_de_comida">Tipo de comida</string>
    <string name="provincia">Provincia</string>
    <string name="selecciona_provincia">Selecciona una provincia</string>
    <string name="selecciona_comida">Selecciona un tipo de comida</string>
    <string name="selecciona_servicio">Selecciona un servicio</string>
    <string name="boton_anadirservicio">boton añadir servicio</string>
    <string name="descripcion">descripción</string>
    <string name="boton_reservar">reservar</string>
    <string name="boton_contacto">boton contacto</string>
    <string name="introduce_servicio">Personaliza tu servicio</string>
    <string name="introduce_descr_servicio">Introduce la descripcion del servicio</string>
    <string name="titulo_pantalla_admin">Opciones administrador</string>
    <string name="titulo_pantalla_user">Gestiona tus reservas</string>
    <string name="nombre_del_usuario">Nombre del usuario</string>
    <string name="boton_editar">Boton editar usuario</string>
    <string name="contraseña_usuario">Contraseña del usuario</string>
    <string name="descripcion_usuario">Descripcion del usuario</string>
    <string name="provincia_usuario">provincia del usuario</string>
    <string name="mail_usuario">mail del usuario</string>
    <string name="telefono_usuario">telefono del usuario</string>
    <string name="tipo_usuario">tipo de usuario</string>
    <string name="comida_usuario">tipo comida usuario</string>
    <string name="servicio_usuario">tipo servicio usuario</string>
    <string name="valoracion_usuario">valoración usuario</string>
    <string name="boton_borrar">Boton borrar</string>
    <string name="boton_lupa">Boton para buscar</string>
    <string name="titulo_lista_usuarios">Lista de usuarios</string>
    <string name="boton_ajustes">Boton ajustes</string>
    <string name="telefono_chef">Teléfono chef</string>
    <string name="boton_logout">Boton logout</string>
    <string name="fecha_reserva">fecha reserva</string>
    <string name="comentario">Comentario</string>
    <string name="introduce_tu_comentario">Introduce tu reseña</string>
    <string name="usuario_t">Usuario :</string>
    <string name="nombre_t">Nombre :</string>
    <string name="Contras_t">Contraseña :</string>
    <string name="descrip_t">Descripción :</string>
    <string name="ubicacion_t">Ubicación :</string>
    <string name="mail_t">Email :</string>
    <string name="telefono_t">Teléfono :</string>
    <string name="tipo_t">Tipo :</string>
    <string name="comida_t">Comida :</string>
    <string name="servicio_t">Servicio :</string>
    <string name="valoracion_t">Valoración :</string>
    <string name="servicio">Servicio</string>
    <string name="tipo_de_servicio">tipo de servicio</string>
    <string name="busca_un_usuario">Filtra por usuario</string>
    <string name="busca_fecha">Filtra las reservas por año</string>
    <string name="titulo_menu_admin">Menú administrador</string>
    <string name="gestion_de_reseñas">Gestión de reseñas</string>
    <string name="gestion_de_usuarios">Gestión de usuarios</string>
    <string name="titulo_menu_chef">Menú chef</string>
    <string name="gestion_de_perfil_chef">Gestión de servicio ofrecido</string>
    <string name="gestion_de_reservas_chef">Gestión de reservas</string>
    <string name="comentario_reserva">Reseña</string>

</resources>