<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1">

    <TextView
        android:id="@+id/edt_telefono_chef"
        android:layout_width="183dp"
        android:layout_height="43dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="10dp"
        android:text="@string/telefono_chef"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibtn_contacto" />

    <ImageView
        android:id="@+id/foto_chef_ampliado"
        android:layout_width="149dp"
        android:layout_height="166dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="245dp"
        android:contentDescription="@string/foto_chef"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056"
        app:srcCompat="@drawable/foto_chef2"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/nombre_chef_ampliado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="128dp"
        android:text="@string/nombre_del_chef"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/foto_chef_ampliado"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/tipo_comida_ampliado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tipo_de_comida"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/foto_chef_ampliado"
        app:layout_constraintTop_toBottomOf="@+id/nombre_chef_ampliado"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/provincia_ampliado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/provincia"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/foto_chef_ampliado"
        app:layout_constraintTop_toBottomOf="@+id/tipo_comida_ampliado"
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:id="@+id/servicio_ampliado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/servicio"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/foto_chef_ampliado"
        app:layout_constraintTop_toBottomOf="@+id/provincia_ampliado"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/descripcion_ampliado"
        android:layout_width="214dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/descripcion"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/foto_chef_ampliado"
        app:layout_constraintTop_toBottomOf="@+id/servicio_ampliado"
        app:layout_constraintVertical_bias="0.004" />

    <ImageButton
        android:id="@+id/ibtn_reservar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:background="@drawable/boton_reservar"
        android:contentDescription="@string/boton_reservar"
        android:onClick="reservar"
        app:layout_constraintBottom_toTopOf="@+id/ibtn_contacto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.746"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripcion_ampliado"
        app:layout_constraintVertical_bias="0.55"
        app:srcCompat="@drawable/boton_reservar"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/ibtn_contacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/boton_contactar"
        android:contentDescription="@string/boton_contacto"
        android:onClick="contactar"
        app:layout_constraintBottom_toTopOf="@+id/edt_telefono_chef"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.745"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibtn_reservar"
        app:srcCompat="@drawable/boton_contactar"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/btn_logout_user"
        android:layout_width="68dp"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/fondo_boton_redondo_logout"
        android:contentDescription="@string/boton_modperfil"
        android:onClick="logout"
        android:tintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_lock_power_off"
        app:tint="@color/white"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/btn_atras"
        android:layout_width="68dp"
        android:layout_height="56dp"
        android:background="@drawable/fondo_boton_redondo"
        android:contentDescription="@string/boton_modperfil"
        android:onClick="atras"
        android:tintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.865"
        app:srcCompat="@android:drawable/ic_menu_revert"
        app:tint="@color/white"
        tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_resenyas_chef_amp"
        android:layout_width="412dp"
        android:layout_height="328dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/ibtn_reservar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foto_chef_ampliado" />


</androidx.constraintlayout.widget.ConstraintLayout>